codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / for commands                            Shift ⇧ + Enter for newline                             "
"  @ for file paths                          Control ⌃ + v to paste images                           "
"  esc again to edit previous message        Control ⌃ + c to exit                                   "
"                                            Control ⌃ + t to view transcript                        "
